# Zvonilka

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  sprints.md
artifacts/scripts/: make_appimage.sh
dependencies/: .gitignore  conanfile.py
dependencies/scripts/: get_deps_linux_debug.sh  get_deps_linux_release.sh
dependencies/scripts/alt-linux/: deploy-deps.sh  get-deps-debug.sh  get-deps-release.sh
dependencies/scripts/alt-linux/change-recipes/: add-conan-editables.sh  rm-conan-editables.sh
dependencies/scripts/alt-linux/change-recipes/egl-system/: conanfile.py
dependencies/scripts/alt-linux/change-recipes/libudev-system/: conanfile.py
dependencies/scripts/alt-linux/change-recipes/opengl-system/: conanfile.py
dependencies/scripts/alt-linux/change-recipes/xorg-system/: conanfile.py
dependencies/scripts/common-linux/: deploy-deps.sh  get-deps-debug.sh  get-deps-release.sh
dependencies/scripts/windows/: deploy-deps.bat  get-deps-debug.bat  get-deps-release.bat  windows-debug.profile  windows-release.profile
deploy/assets/: Zvonilka.desktop
deploy/scripts/: make_appimage.sh
src/: CMakeLists.txt  main.cpp  signaling_server.py
src/shaders/: voice_vis_shader.frag  voice_vis_shader.vert
src/signaling/: signaling_server.py  turnserver.conf
